--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "a8ec0356-bdb2-47ca-ac62-4c9b7964dd42"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
