--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "~12.2.0",
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-daterangepicker-material": "^2.4.2",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
