--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "ng2-date-picker": "^12.0.4",
+    "ng2-datepicker": "^12.0.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-daterangepicker-material": "^2.4.2",
     "ngx-spinner": "^12.0.0",
