--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng2-datepicker": "^12.0.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-daterangepicker-material": "^2.4.2",
+    "ngx-lightbox": "^2.5.1",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
