--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@capacitor/android": "^3.4.1",
+    "@capacitor/angular": "^2.0.0",
+    "@capacitor/app": "^1.1.0",
+    "@capacitor/core": "^3.4.1",
     "http-status-codes": "^2.1.4",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
@@ -25,6 +29,7 @@
     "ng2-date-picker": "^12.0.4",
     "ng2-datepicker": "^12.0.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-bootstrap": "^8.0.0",
     "ngx-daterangepicker-material": "^2.4.2",
     "ngx-lightbox": "^2.5.1",
     "ngx-spinner": "^12.0.0",
@@ -37,6 +42,7 @@
     "@angular-devkit/build-angular": "~12.2.10",
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
+    "@capacitor/cli": "^3.4.1",
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.8",
     "@types/node": "^12.11.1",
