--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/angular": "^2.0.0",
     "@capacitor/app": "^1.1.0",
     "@capacitor/core": "^3.4.1",
+    "angular-mydatepicker": "^0.11.5",
     "http-status-codes": "^2.1.4",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
