--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
