--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@capacitor/angular": "^2.0.0",
     "@capacitor/app": "^1.1.0",
     "@capacitor/core": "^3.4.1",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "angular-mydatepicker": "^0.11.5",
     "http-status-codes": "^2.1.4",
     "jquery": "^3.6.0",
@@ -35,6 +37,7 @@
     "ngx-lightbox": "^2.5.1",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.3",
+    "package": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.4",
@@ -45,6 +48,7 @@
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
     "@capacitor/cli": "^3.4.1",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.8",
     "@types/node": "^12.11.1",
