--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.8",
     "@types/node": "^12.11.1",
+    "cypress": "^9.5.4",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
