--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jquery": "^3.5.8",
     "@types/node": "^12.11.1",
     "cypress": "^9.5.4",
+    "cypress-xpath": "^1.6.2",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
